<resources>
    <string name="app_name">Palaver</string>
    <string name="username">username</string>
    <string name="re_password">re-password</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>
    <string name="palaver_logo">Palaver Logo</string>
    <string name="palaver_sharedPreferences">PalaverSharedPreference</string>>
    <string name="is_log_in">isLogin</string>
    <string name="close">CLOSE</string>
    <string name="add">ADD</string>
    <string name="add_friend">Add Friend</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="noInternet">No Internet Connection</string>
    <string name="login">Login</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="passwordChanged">passwordChanged</string>
    <string name="message">message</string>
    <string name="send">send</string>
    <string name="send_file">Send File</string>
    <string name="share_location">Share Location</string>
    <string name="changePassword">Change Password</string>
    <string name="newPassword">new password</string>
    <string name="change">Change</string>
    <string name="showMessage">Show Message</string>
    <string name="removeFriend">Delete Friend</string>
    <string name="item">Item</string>
    <string name="send_location">Send Location</string>
    <string name="cancel">Cancel</string>
</resources>
