...
    android:paddingLeft="25dp"
    android:paddingTop="25dp"
    android:paddingRight="25dp"
    android:paddingBottom="25dp">

    <Button
        android:id="@+id/addFriend_closeButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"

        android:text="@string/close"
        android:textColor="@color/colorChatBackgroud"
        android:textColorHint="#90FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addFriend_addButton"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFriend_editText" />

    <Button
        android:id="@+id/addFriend_addButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
