<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/item"
        android:id="@+id/search_menu"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search_black_24dp"/>
</menu>